--- a/style.css
+++ b/style.css
@@ -116,3 +116,13 @@ button{
 .card:hover{
     transform: translateY(-10px);
 }
+
+h5{
+    color:#fff;
+    text-shadow: 0 0 5px #999;
+}
+
+.card p{
+    text-shadow: 0 0 15px #000;
+    font-size: 8px;
+}
